@@ -61,21 +61,16 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 553)
-(Parent-Version lpmud 3-3 552)
+(Project-Version lpmud 3-3 554)
+(Parent-Version lpmud 3-3 553)
 (Version-Log "
-  - (config.h.in) Oops, the AVL change to smalloc (3.3.534) was never activated.
-  - (smalloc.c) Small block allocated directly from a freelist didn't set
-       the GC_FREE flag. As this flag doubles as M_DEFRAG flag, many
-       blocks were accidentally considered 'permanent'.
-  - (object.c) When writing save files, only the names of structs
-       will use the shared-string notation. Other strings are given
-       literally for better readability (suggested by Coogan).
+  - (func_spec, object, parse.c) The result of efun deep_inventory()
+       can be restricted to a certain depth (suggested by Urv).
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Thu, 20 May 2004 20:51:32 -0600")
+(Checkin-Time "Fri, 21 May 2004 23:05:43 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -113,8 +108,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.616 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.354 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.617 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.355 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -221,13 +216,13 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.2 644))
-  (src/object.h (lpmud/44_object.h 1.34.1.19.1.4 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.43 644))
+  (src/object.h (lpmud/44_object.h 1.34.1.19.1.5 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.44 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.7 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
   (src/parse.h (lpmud/f/26_parse.h 1.7.1.2.1.4 644))
-  (src/parse.c (lpmud/42_parse.c 1.26.1.15 644))
+  (src/parse.c (lpmud/42_parse.c 1.26.1.16 644))
   (src/patchlevel.h (lpmud/40_patchlevel 1.22 644))
   (src/pcre/study.c (lpmud/q/51_study.c 1.1 644))
   (src/pcre/pcretest.c (lpmud/r/0_pcretest.c 1.1 644))
@@ -323,7 +318,7 @@
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.4 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.33 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.34 644))
   (src/string_spec (lpmud/f/6_string_spe 1.14.1.16 644))
   (src/mkfunc.c (lpmud/l/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.30.1.11 644))
@@ -1058,7 +1053,7 @@
   (doc/efun/debug_info (lpmud/o/22_debug_info 1.35 644))
   (doc/efun/debug_message (lpmud/o/23_debug_mess 1.1.1.5 644))
   (doc/efun/deep_copy (lpmud/m/29_deep_copy 1.4 644))
-  (doc/efun/deep_inventory (lpmud/o/24_deep_inven 1.3 644))
+  (doc/efun/deep_inventory (lpmud/o/24_deep_inven 1.4 644))
   (doc/efun/destruct (lpmud/o/25_destruct 1.7 644))
   (doc/efun/disable_commands (lpmud/o/26_disable_co 1.3 644))
   (doc/efun/ed (lpmud/o/27_ed 1.3 644))
@@ -1542,7 +1537,7 @@
   (doc/efun.de/ed.de (lpmud/j/b/8_ed.de 1.1 640))
   (doc/efun.de/disable_commands.de (lpmud/j/b/9_disable_co 1.1 640))
   (doc/efun.de/destruct.de (lpmud/s/51_destruct.d 1.2 644))
-  (doc/efun.de/deep_inventory.de (lpmud/j/b/10_deep_inven 1.1 640))
+  (doc/efun.de/deep_inventory.de (lpmud/j/b/10_deep_inven 1.2 640))
   (doc/efun.de/deep_copy.de (lpmud/j/b/11_deep_copy. 1.1 640))
   (doc/efun.de/debug_message.de (lpmud/j/b/12_debug_mess 1.1 640))
   (doc/efun.de/debug_info.de (lpmud/j/b/13_debug_info 1.4 640))
