@@ -4,7 +4,7 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 
-18-May-2004 (Lars Duening) -- Development Release 3.3
+21-May-2004 (Lars Duening) -- Development Release 3.3
 
     - Changed efuns:
        + Removed obsolete and deprecated efuns: add_verb(), add_xverb(),
@@ -23,6 +23,8 @@ For a detailed list of all changes see the file CHANGELOG.
        + debug_info(): Option DINFO_DUMP:"memory" to dump a list of
            all allocated memory blocks (currently supported just by
            smalloc).
+       + deep_inventory(): The result can be restricted to a certain
+           depth.
        + filter(): The efun can now filter strings as well.
        + function_exists(): now also returns the filename and
            linenumber of a function.
