@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+21-May-2004 (Lars Duening) (3.3.554)
+  - (func_spec, object, parse.c) The result of efun deep_inventory()
+       can be restricted to a certain depth (suggested by Urv).
+
 20-May-2004 (Lars Duening)  (3.3.553)
   - (config.h.in) Oops, the AVL change to smalloc (3.3.534) was never activated.
   - (smalloc.c) Small block allocated directly from a freelist didn't set
